FR + refactor des configs